--- a/src/i18n/translations/pl.json
+++ b/src/i18n/translations/pl.json
@@ -14,7 +14,7 @@
 
   },
   "AboutMeScreen": {
-    "Title": "Coś więcej o mnie ...",
+    "Title": "Coś o mnie ...",
     "Description": "Mam na imię Jarek, mam 25 lat i studiuję Automatykę i Robotykę na specjalizacji IT na Politechnice Krakowskiej. Fascynuję się automatyzacją i wszystkim, co pozwala na usprawnienie procesów – wierzę, że każdą czynność można zoptymalizować, by była szybsza i bardziej efektywna. Moje zainteresowania to nie tylko programowanie, ale też szukanie innowacyjnych rozwiązań, które ułatwiają życie i pracę.",
     "EducationTitle": "Wykształcenie",
     "Education1": "Od zawsze lubiłem technologię i to, jak sprytne rozwiązania mogą ułatwiać życie. Dlatego zamiast liceum wybrałem technikum – konkretnie ZSEiO Technikum nr 4 w Przemyślu na kierunku Teleinformatyk. To tam wkręciłem się w świat sieci, systemów komputerowych i telekomunikacji, a moja zajawka na inżynierię dopiero się zaczęła!",
